add username label

--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <title>Login</title>
 </head>
 <body>
-  <label>Login</label>
+  <h1>Login</h1>
+  <label> Enter your username</label>
 </body>
 </html>
