--- a/home.html
+++ b/home.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+    $(function(){
+        $('.dropdown').hover(function() {
+            $(this).addClass('show'); 
+            $(this).find('.dropdown-menu').addClass('show');
+        },
+        function() {
+            $(this).removeClass('show'); 
+            $(this).find('.dropdown-menu').removeClass('show');
+        });
+    });
+    </script>
     <title>Home</title>
 </head>
 <body>
@@ -13,7 +29,16 @@
         <a href="/"><i class="fas fa-home"></i></a> |
         <a href="/messages"><i class="fas fa-envelope"></i></a> |
         <a href="/notifications"><i class="fas fa-bell"></i></a> |
-        <span>Name</span>
+        <div class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Name
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Account Settings</a>
+              <a class="dropdown-item" href="#">Profile</a>
+              <a class="dropdown-item" href="#">Log out</a>
+            </div>
+          </div>
       </nav>
     </header>
 </body>
